# bazel-java-app-template

./: .bazelrc  .gitignore  .pre-commit-config.yaml  README.md  WORKSPACE
api/: BUILD.bazel
api/petstore/: BUILD.bazel
petstore/: BUILD.bazel
petstore/deployment/: BUILD.bazel  docker-compose.yml
petstore/petstore-api/: BUILD.bazel
petstore/petstore-core/: BUILD.bazel
petstore/petstore-core/src/main/java/net/yishanhe/bazel/example/petstore/api/: PetsApiImpl.java
petstore/petstore-core/src/main/java/net/yishanhe/bazel/example/petstore/model/: PetModel.java
petstore/petstore-core/src/main/java/net/yishanhe/bazel/example/petstore/repository/: PetRepository.java
petstore/petstore-server/: BUILD.bazel
petstore/petstore-server/src/main/java/net/yishanhe/bazel/example/petstore/: PetApiDelegateImpl.java  PetStoreApplication.java
petstore/petstore-server/src/main/resources/: application.properties
petstore/src/main/java/net/yishanhe/bazel/example/petstore/: PetApiDelegateImpl.java
tools/: tools.bzl
tools/builds/: bazel
tools/helm/: BUILD.bazel  helm.BUILD  helm.sh
tools/linters/: BUILD.bazel  buildifier.sh  shfmt.sh
tools/lombok/: BUILD.bazel
tools/openapi/: BUILD.bazel
tools/precommit/: BUILD.bazel  precommit.py  requirements.txt
tools/precommit/hooks/: run-bazel-buildifier.sh
tools/testutil/: BUILD.bazel
