load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "petstore",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//api:petstore-server-api",
        "//tools/lombok",
        "@maven//:org_springframework_spring_core",
    ],
)
