package(default_visibility = ["//visibility:public"])

#FIXME: adding container_push
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")

container_layer(
    name = "petstore-server-jar",
    directory = "/app",
    files = [
        "//petstore/petstore-server:petstore-server.jar",
    ],
    mode = "0o550",
)

container_image(
    name = "petstore",
    base = "@java_base//image",
    entrypoint = "java -jar /app/petstore-server.jar",
    layers = [":petstore-server-jar"],
)
