load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_openapi//openapi:openapi.bzl", "openapi_gen")

# FIXME: figure out which one to use additional_properties or system_properties
openapi_gen(
    name = "petstore-server-src",
    additional_properties = {
        "dateLibrary": "java8",
        "interfaceOnly": "true",
    },
    api_package = "net.yishanhe.bazel.example.api.petstore",
    invoker_package = "net.yishanhe.bazel.api.petstore",
    language = "spring",
    model_package = "net.yishanhe.bazel.example.api.petstore.dto",
    spec = "//api/petstore:api-spec",
    system_properties = {
    },
)

java_library(
    name = "petstore-server-api",
    srcs = [
        ":petstore-server-src",
    ],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:io_springfox_springfox_core",
        "@maven//:io_springfox_springfox_spi",
        "@maven//:io_springfox_springfox_spring_web",
        "@maven//:io_springfox_springfox_swagger2",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_openapitools_jackson_databind_nullable",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_webmvc",
    ],
)
