package(default_visibility = ["//visibility:public"])

load("@rules_java//java:defs.bzl", "java_library")
load("@rules_spring//springboot:springboot.bzl", "springboot")

java_library(
    name = "petstore-app",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:org_postgresql_postgresql",
        "@maven//:org_springframework_boot_spring_boot_actuator",
        "@maven//:org_springframework_boot_spring_boot_actuator_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_loader",
        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:org_springframework_boot_spring_boot_starter_data_jpa",
        "@maven//:org_springframework_boot_spring_boot_starter_logging",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
    ],
    deps = [
        "//petstore/petstore-core",
        "//tools/lombok",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_data_spring_data_jpa",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_web",
    ],
)

springboot(
    name = "petstore-server",
    boot_app_class = "net.yishanhe.bazel.example.petstore.PetStoreApplication",
    java_library = ":petstore-app",
)
